# Batch-Hierarchical-Inference-GPU

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements-docker-common.txt  requirements-docker-cpu.txt  requirements-docker-gpu.txt  requirements.txt
config/: defaults.env  expeca_public_ip.env  experiment.env  thesis_configs.csv  thesis_reproduction.env
docs/: expeca_public_ip_cpu_baseline.md  thesis_batch_hi_summary.md  thesis_reproduction.md
notebooks/: ExPECA_HI_setup_EP5G.ipynb  ExPECA_HI_setup_GPU_RaspberryPi_Public_IP.ipynb  ExPECA_HI_setup_Public_IP.ipynb  ExPECA_raspberry_setup.md
scripts/: README.md  build_expeca_cpu_images.sh  build_expeca_gpu_server_image.sh  build_expeca_raspberry_pi_image.sh  check_expeca_cpu_prereqs.sh  download_dataset.sh  download_models.sh  prepare_expeca_author_layout.sh  push_expeca_cpu_images.sh  push_expeca_gpu_server_image.sh  push_expeca_raspberry_pi_image.sh  setup_env.sh  setup_expeca_notebook_env.sh
scripts_containers/: README.md  build_all_and_push.ps1  build_edge_device_amd64.ps1  build_edge_device_arm64.ps1  build_edge_server_amd64.ps1  push_containers.ps1  start_local_containers_amd64.ps1  start_local_containers_arm64.ps1  tag_containers.ps1
src/: README.md  analyze_results.py  compare_grid_results.py  constants.py  experiment_runner.py  run_expeca_batch_grid.py  run_expeca_public_ip_test.py  run_local_docker_test.py  run_local_smoke_test.py  run_thesis_reproduction.py  thesis_metrics.py  thesis_models.py  thesis_plots.py  thesis_public_ip_run.py  thesis_report.py  thesis_reproduction_runner.py  (+1 more)
(+20 files in other folders)
